--- a/Junior/easybank-landing-page-main/src/components/Navbar/MobileNav.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Navbar/MobileNav.module.css
@@ -4,6 +4,12 @@
 
 .MobileNav__btn {
   cursor: pointer;
+  line-height: 35px;
+  height: 35px;
+  width: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .MobileNav__themeBtn {
