--- a/Junior/easybank-landing-page-main/src/components/Navbar/Navbar.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Navbar/Navbar.module.css
@@ -4,11 +4,15 @@
   width: 100%;
   display: flex;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 .header__content {
   width: 100%;
-  max-width: 1100px;
+  max-width: var(--max-w);
   margin: auto;
 
   display: flex;
