Add fade-down animation to mobile menu

--- a/Junior/easybank-landing-page-main/src/components/Navbar/NavLinks.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Navbar/NavLinks.module.css
@@ -37,8 +37,9 @@
     position: absolute;
     top: 5em;
     left: 0;
+    z-index: -900;
 
-    background: linear-gradient(to bottom, #0009, transparent);
+    background: linear-gradient(to bottom, #000, transparent);
   }
 
   .nav__menuBg {
