--- a/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
@@ -5,7 +5,7 @@
 }
 
 .content {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   max-width: var(--max-w);
   width: 100%;
   height: 100%;
@@ -37,7 +37,7 @@
 
 .information {
   height: 21em;
-  border: 1px dashed yellowgreen;
+  /* border: 1px dashed yellowgreen; */
   /* padding: 1em; */
 }
 
