Switch to CSS Grid for listing cards

--- a/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
@@ -42,8 +42,22 @@
 }
 
 .ul {
+  border: 1px dashed yellowgreen;
+
   list-style: none;
-  display: flex;
+
+  /* display: flex;
   justify-content: space-between;
-  gap: 1em;
+  gap: 1em; */
+
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1em;
+}
+
+@media (max-width: 1024px) {
+  .content {
+    padding: 6.5em 1em;
+  }
 }
