Structure Main and Card components' layout for max-width of 768px

--- a/Junior/easybank-landing-page-main/src/components/Main/Card.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Main/Card.module.css
@@ -1,6 +1,4 @@
 .card {
-  /* border: 1px solid orange; */
-
   height: 21em;
   display: flex;
   flex-direction: column;
@@ -22,7 +20,12 @@
 .cardText {
   color: var(--neut-blue);
   font-weight: 400;
-  /* font-size: 1.05rem; */
   font-size: 1.05rem;
   line-height: 1.55rem;
+}
+
+@media (max-width: 768px) {
+  .card {
+    height: 18em;
+  }
 }
