Style and structure Main and Card components' contents for mobile resolution

--- a/Junior/easybank-landing-page-main/src/components/Main/Card.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Main/Card.module.css
@@ -29,3 +29,21 @@
     height: 18em;
   }
 }
+
+@media (max-width: 640px) {
+  .card {
+    height: 100%;
+    align-items: center;
+    gap: 1.5em;
+  }
+
+  .cardTitle {
+    font-size: 1.3rem;
+  }
+
+  .cardText {
+    text-align: center;
+    font-size: 1rem;
+    line-height: 1.7rem;
+  }
+}
