--- a/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
@@ -80,3 +80,43 @@
     grid-gap: 1em;
   }
 }
+
+@media (max-width: 640px) {
+  .container {
+    height: 210vh;
+  }
+
+  .content {
+    padding: 4em 1.3em;
+    height: 100%;
+    gap: 3.5em;
+  }
+
+  .header {
+    text-align: center;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .description {
+    display: inline;
+    font-size: 1rem;
+    line-height: 1.7rem;
+  }
+
+  .information {
+    height: 100%;
+  }
+
+  .cardItem {
+    padding: 0.7em 0em;
+  }
+
+  .ul {
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: 1fr;
+    grid-row: 1em;
+  }
+}
