--- a/Junior/easybank-landing-page-main/src/components/Articles/Articles.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Articles/Articles.module.css
@@ -2,24 +2,42 @@
   /*  */
   background-color: var(--neut-lightgray);
   height: 71vh;
+  width: 100%;
 }
 
 .content {
-  /*  */
+  border: 1px solid red;
+
+  max-width: var(--max-w);
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 4.5em 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .title {
-  /*  */
+  font-weight: 300;
+  font-size: 2.5rem;
+  color: var(--prim-blue);
 }
 
 .articles {
-  /*  */
+  border: 1px solid blue;
+
+  height: 25em;
+  width: 100%;
 }
 
 .ul {
-  /*  */
+  list-style: none;
 }
 
 .cardItem {
-  /*  */
+  /* border: 1px solid orange; */
+  height: 100%;
+  width: 16em;
 }
