--- a/Junior/easybank-landing-page-main/src/components/Articles/Articles.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Articles/Articles.module.css
@@ -1,18 +1,15 @@
 .container {
-  /*  */
   background-color: var(--neut-lightgray);
   height: 71vh;
   width: 100%;
 }
 
 .content {
-  border: 1px solid red;
-
   max-width: var(--max-w);
   width: 100%;
   height: 100%;
   margin: auto;
-  padding: 4.5em 0;
+  padding: 5.1em 0 4.5em 0;
 
   display: flex;
   flex-direction: column;
@@ -26,7 +23,7 @@
 }
 
 .articles {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 
   height: 25em;
   width: 100%;
@@ -34,10 +31,15 @@
 
 .ul {
   list-style: none;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  justify-items: center;
+  grid-column-gap: 1em;
 }
 
 .cardItem {
-  /* border: 1px solid orange; */
   height: 100%;
-  width: 16em;
+  /* width: 16em; */
 }
