--- a/Junior/easybank-landing-page-main/src/components/Articles/Articles.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Articles/Articles.module.css
@@ -36,10 +36,70 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
   justify-items: center;
-  grid-column-gap: 1em;
+  grid-column-gap: 1.82em;
 }
 
 .cardItem {
   height: 100%;
   /* width: 16em; */
+}
+
+/* @media (max-width: 1024px) {
+  .content {
+    padding: 4.5em 1em;
+  }
+} */
+
+@media (max-width: 768px) {
+  .container {
+    height: 110vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .content {
+    margin: 0;
+    height: 90%;
+    padding: 0 1em;
+    gap: 2.5em;
+  }
+
+  .title {
+    /*  */
+  }
+
+  .articles {
+    height: 100%;
+  }
+
+  .ul {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 1.5em;
+  }
+}
+
+@media (max-width: 640px) {
+  .container {
+    height: 295vh;
+  }
+
+  .content {
+    height: auto;
+    padding: 0 1.5em 2em 1.5em;
+  }
+
+  .title {
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  .ul {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 1.5em;
+  }
 }
