--- a/Junior/easybank-landing-page-main/src/components/Articles/Card.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Articles/Card.module.css
@@ -10,7 +10,7 @@
 }
 
 .content {
-  padding: 1.3em 1em;
+  padding: 1em 1em;
 
   display: flex;
   flex-direction: column;
@@ -21,13 +21,11 @@
   overflow: hidden;
   width: 100%;
   height: 51%;
-
-  /* border: 1px solid red; */
 }
 
 .img {
-  width: 116%;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .author {
@@ -58,4 +56,19 @@
   font-size: 0.85rem;
   line-height: 1.2rem;
   text-align: left;
+}
+
+@media (max-width: 640px) {
+  .card {
+    height: 26em;
+  }
+
+  .content {
+    padding: 1em 1.7em 2.5em 1.7em;
+    gap: 0.7em;
+  }
+
+  .textPreview {
+    font-size: 0.82rem;
+  }
 }
