Convert each SVG socials icon into a component

--- a/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Main/Main.module.css
@@ -55,7 +55,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
     height: calc(100vh - 5em);
   }
