--- a/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
@@ -5,7 +5,35 @@
 }
 
 .content {
+  max-width: var(--max-w);
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 2em 0;
+
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  /* grid-column-gap: 1rem; */
 }
 
 .left {
+  grid-column: 1/4;
+  background-color: lightskyblue;
+}
+
+/* 
+    Nav
+*/
+.nav {
+  grid-column: 4/7;
+  background-color: lightgrey;
+}
+
+/* 
+    Right 
+*/
+.right {
+  grid-column: 10/13;
+  background-color: lightseagreen;
 }
