Style and structure layout of Footer component

--- a/Junior/easybank-landing-page-main/src/assets/icons-socials/Socials.module.css
+++ b/Junior/easybank-landing-page-main/src/assets/icons-socials/Socials.module.css
@@ -1,3 +1,8 @@
 .icon {
-  fill: red;
+  fill: var(--neut-white);
+  transition: var(--transition);
+}
+
+.icon:hover {
+  fill: var(--prim-green);
 }
