--- a/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
@@ -2,6 +2,7 @@
   background-color: var(--prim-blue);
   height: 11.875em; /* 190px */
   width: 100%;
+  position: relative;
 }
 
 .content {
@@ -9,7 +10,7 @@
   width: 100%;
   height: 100%;
   margin: auto;
-  padding: 2em 0;
+  padding: 2.8em 0;
 
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -18,8 +19,23 @@
 }
 
 .left {
+  /* border: 1px solid lightblue; */
+
   grid-column: 1/4;
-  background-color: lightskyblue;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo {
+}
+
+.socials {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.7em;
 }
 
 /* 
@@ -27,7 +43,34 @@
 */
 .nav {
   grid-column: 4/7;
-  background-color: lightgrey;
+  /* border: 1px solid lightblue; */
+  /* background-color: lightgrey; */
+}
+
+.list {
+  height: 100%;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+}
+
+.item:nth-of-type(2n) {
+  margin-left: 2.6em;
+}
+
+.link:link,
+.link:visited {
+  text-decoration: none;
+  transition: var(--transition);
+  color: var(--neut-grayblue);
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+
+.link:hover {
+  color: var(--prim-green);
 }
 
 /* 
@@ -35,5 +78,28 @@
 */
 .right {
   grid-column: 10/13;
-  background-color: lightseagreen;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.copyright {
+  color: var(--neut-blue);
+  margin-top: 1em;
+}
+
+.attribution {
+  color: var(--neut-blue);
+  font-size: 0.7rem;
+}
+
+.attribution .link {
+  color: var(--neut-blue);
+  font-size: 0.7rem;
+  transition: var(--transition);
+}
+
+.attribution .link:hover {
+  color: var(--prim-green);
 }
