--- a/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
@@ -103,3 +103,75 @@
 .attribution .link:hover {
   color: var(--prim-green);
 }
+
+@media screen and (max-width: 1024px) {
+  .container {
+    padding: var(--px-lg);
+  }
+
+  .attribution,
+  .attribution .link {
+    font-size: 0.65rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    height: 50vh;
+  }
+
+  .content {
+    padding: 3em 5em;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(14, 1fr);
+    justify-items: center;
+  }
+
+  .left {
+    grid-row: 1/3;
+    grid-column: 1/2;
+  }
+
+  /* 
+    nav 
+  */
+  .nav {
+    grid-row: 4/10;
+    grid-column: 1/2;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .item:nth-of-type(2n) {
+    margin-left: 0;
+  }
+
+  .link:link,
+  .link:visited {
+    font-size: 1rem;
+  }
+
+  /* 
+    right 
+  */
+  .right {
+    grid-row: 11/15;
+    grid-column: 1/2;
+
+    align-items: center;
+  }
+
+  .attribution {
+    font-size: 0.75rem;
+  }
+
+  .attribution .link:link,
+  .attribution .link:visited {
+    font-size: 0.75rem;
+  }
+}
