--- a/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Footer/Footer.module.css
@@ -2,7 +2,6 @@
   background-color: var(--prim-blue);
   height: 11.875em; /* 190px */
   width: 100%;
-  position: relative;
 }
 
 .content {
@@ -19,8 +18,6 @@
 }
 
 .left {
-  /* border: 1px solid lightblue; */
-
   grid-column: 1/4;
 
   display: flex;
@@ -43,8 +40,6 @@
 */
 .nav {
   grid-column: 4/7;
-  /* border: 1px solid lightblue; */
-  /* background-color: lightgrey; */
 }
 
 .list {
@@ -91,6 +86,7 @@
 
 .attribution {
   color: var(--neut-blue);
+  opacity: 0.7;
   font-size: 0.7rem;
 }
 
@@ -117,34 +113,32 @@
 
 @media screen and (max-width: 768px) {
   .container {
-    height: 50vh;
+    height: 505px;
   }
 
   .content {
-    padding: 3em 5em;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(14, 1fr);
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+    padding: 2em 3em;
   }
 
-  .left {
-    grid-row: 1/3;
-    grid-column: 1/2;
+  .socials {
+    margin-top: 2em;
   }
 
   /* 
     nav 
   */
-  .nav {
-    grid-row: 4/10;
-    grid-column: 1/2;
-  }
 
   .list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    gap: 1em;
   }
 
   .item:nth-of-type(2n) {
@@ -153,25 +147,22 @@
 
   .link:link,
   .link:visited {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   /* 
     right 
   */
   .right {
-    grid-row: 11/15;
-    grid-column: 1/2;
-
     align-items: center;
   }
 
   .attribution {
-    font-size: 0.75rem;
+    font-size: 0.65rem;
   }
 
   .attribution .link:link,
   .attribution .link:visited {
-    font-size: 0.75rem;
+    font-size: 0.65rem;
   }
 }
