Create Hero.jsx component and add its html markup

--- a/Junior/clipboard-landing-page-main/src/sass/main.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/main.scss
@@ -1,5 +1,8 @@
-@import "variables";
+@use "components/hero";
+
+@use "variables";
 @import "mixins";
 @import "animations";
 
 @import "globals";
+@import "components/hero";
