Install npm node-sass

--- a/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
@@ -1,7 +1,8 @@
-@use "../variables";
+@import "../variables";
+
 .hero {
   &__logo {
-    color: $darkGrayishBlue;
+    color: $lightBlue;
     font-size: 10rem;
   }
 
