--- a/Junior/clipboard-landing-page-main/src/sass/main.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/main.scss
@@ -1,6 +1,7 @@
-@use "variables";
+@import "variables";
 @import "mixins";
 @import "animations";
-
 @import "globals";
+
+// Components
 @import "components/hero";
