--- a/Junior/clipboard-landing-page-main/src/sass/_globals.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_globals.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,400;0,600;1,400;1,600&display=swap");
+@import "./variables";
 
 *,
 *::before,
@@ -9,5 +9,5 @@
 }
 
 body {
-  font-family: "Bai Jamjuree", sans-serif;
+  font-family: $BaiJamjuree;
 }
