--- a/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
@@ -1,11 +1,21 @@
 .hero {
+  background-image: $bg-mobile;
   // &__logo {
   // }
 
   &__text {
+    text-align: center;
+
     h1 {
-      color: $lightBlue;
-      font-size: 3rem;
+      color: $darkGrayishBlue;
+      font-size: $font-h1;
+      line-height: 1.2;
+      font-weight: 600;
+    }
+
+    p {
+      font-size: $font-sm;
+      line-height: 1.5;
     }
   }
 }
