--- a/Junior/clipboard-landing-page-main/src/sass/_variables.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_variables.scss
@@ -11,8 +11,8 @@ $white: #fff;
 
 // Font
 $BaiJamjuree: "Bai Jamjuree", sans-serif;
-$font-h1: 1.625rem;
-$font-sm: 0.75rem; // 12px
+$font-h1: 1.9375rem; // 31px
+$font-sm: 1rem; // 16px
 $font-md: 1.125rem; // 18px
 
 // Background image
