--- a/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
@@ -1,21 +1,29 @@
 .hero {
   background-image: $bg-mobile;
-  // &__logo {
-  // }
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  &__logo {
+    height: 7.8125rem;
+    width: 7.8125rem;
+    margin-bottom: 4.4375rem;
+
+    img {
+      width: auto;
+      height: 100%;
+    }
+  }
 
   &__text {
+    margin-bottom: 3.125rem;
     text-align: center;
 
     h1 {
-      color: $darkGrayishBlue;
-      font-size: $font-h1;
-      line-height: 1.2;
-      font-weight: 600;
+      margin-bottom: 1.375rem;
     }
+  }
 
-    p {
-      font-size: $font-sm;
-      line-height: 1.5;
-    }
+  &__btns {
+    // border: 1px solid red;
   }
 }
