Update mobile sections' container padding, overide padding-top of hero page

--- a/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
@@ -3,6 +3,8 @@
   background-repeat: no-repeat;
   background-size: contain;
 
+  padding-top: 7.625rem;
+
   &__logo {
     height: 7.8125rem;
     width: 7.8125rem;
@@ -23,7 +25,6 @@
     }
   }
 
-  &__btns {
-    // border: 1px solid red;
-  }
+  // &__btns {
+  // }
 }
