--- a/Junior/clipboard-landing-page-main/src/sass/_globals.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_globals.scss
@@ -22,12 +22,21 @@ h1 {
   font-size: $font-h1;
   line-height: 1.2;
   font-weight: 600;
+
+  @include breakpoint-up(lg) {
+    font-size: 3rem;
+    letter-spacing: -3.7%;
+  }
 }
 
 p {
-  // padding: 0 0.755rem;
   font-size: $font-sm;
   line-height: 26px;
+
+  @include breakpoint-up(lg) {
+    font-size: 1.3125rem;
+    letter-spacing: -1.5%;
+  }
 }
 
 a,
