Place buttons into its own button and style its display for mobile, tablet and desktop

--- a/Junior/clipboard-landing-page-main/src/sass/_mixins.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_mixins.scss
@@ -3,12 +3,14 @@
   // style goes here
 }
 
+// 640px, 1024px, 1400px
 $breakpoints-up: (
   "md": "40em",
   "lg": "64em",
   "xl": "87.5em",
 );
 
+// 639px, 1023px, 1399px
 $breakpoints-down: (
   "sm": "39.9375em",
   "md": "63.9375em",
