--- a/Junior/clipboard-landing-page-main/src/sass/_globals.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_globals.scss
@@ -34,7 +34,7 @@ p {
   line-height: 26px;
 
   @include breakpoint-up(lg) {
-    font-size: 1.3125rem;
+    font-size: $font-lg;
     letter-spacing: -1.5%;
   }
 }
@@ -67,27 +67,9 @@ a:hover {
 }
 
 .section-p {
-  &-mobile {
-    padding: 5.125rem 2.1rem;
-  }
-}
+  padding: 5.125rem 2.1rem;
 
-.btn {
-  width: 19.375rem;
-  padding: 0.938rem 0rem;
-  border-radius: 50px;
-  color: $white;
-  font-weight: 600;
-  font-size: $font-md;
-  text-align: center;
-
-  &__primary {
-    background-color: $strongCyan;
-    box-shadow: inset 0 -2px 1px 1px $primaryBtnShadow;
-  }
-
-  &__secondary {
-    background-color: $lightBlue;
-    box-shadow: inset 0 -2px 1px 1px $secondaryBtnShadow;
+  @include breakpoint-up(lg) {
+    padding: 0 23.4375rem;
   }
 }
