--- a/Junior/clipboard-landing-page-main/src/sass/_variables.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_variables.scss
@@ -5,15 +5,17 @@ $strongCyan: hsl(171, 66%, 44%);
 $lightBlue: hsl(233, 100%, 69%);
 $darkGrayishBlue: hsl(210, 10%, 33%);
 $grayishBlue: hsl(201, 11%, 66%);
-$primaryBtnShadow: hsl(171, 68%, 29%);
-$secondaryBtnShadow: hsl(233, 58%, 56%);
 $white: #fff;
+$primaryBtnShadow: hsl(171, 67%, 36%);
+$secondaryBtnShadow: hsl(233, 68%, 60%);
+$glow: hsla(171, 66%, 44%, 0.498);
 
 // Font
 $BaiJamjuree: "Bai Jamjuree", sans-serif;
 $font-h1: 1.9375rem; // 31px
 $font-sm: 1rem; // 16px
 $font-md: 1.125rem; // 18px
+$font-lg: 1.3125rem; // 21px
 
 // Background image
 $bg-mobile: url("../../assets/images/bg-header-mobile.png");
