--- a/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
@@ -1,19 +1,38 @@
 .hero {
-  padding-top: 7.625rem;
-  background-image: $bg-mobile;
-  background-repeat: no-repeat;
-  background-size: 100%;
+  position: relative;
 
-  @include breakpoint-up(lg) {
-    padding-top: 7.9375rem;
-    background-image: $bg-desktop;
-    background-size: contain;
+  &__bg {
+    // border: 1px solid red;
+
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    background-image: $bg-mobile;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 20.5rem;
+
+    @include breakpoint-up(md) {
+      min-height: 25rem;
+      background-position: center 70%;
+    }
+
+    @include breakpoint-up(lg) {
+      background-image: $bg-desktop;
+      background-position: center bottom;
+    }
   }
 
   &__logo {
     height: 7.8125rem;
     width: 7.8125rem;
+    margin-top: 7.625rem;
     margin-bottom: 4.4375rem;
+
+    @include breakpoint-up(lg) {
+      margin-top: 130px;
+    }
 
     img {
       width: auto;
@@ -29,7 +48,4 @@
       margin-bottom: 1.375rem;
     }
   }
-
-  // &__btns {
-  // }
 }
