--- a/Junior/clipboard-landing-page-main/src/sass/components/_buttons.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_buttons.scss
@@ -19,8 +19,11 @@
     border-radius: 50px;
     color: $white;
     font-size: $font-sm; // 16px
-    font-weight: 400;
+    font-family: $BaiJamjuree;
+    font-weight: 600;
     text-align: center;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
 
     @include breakpoint-up(md) {
       width: 100%;
@@ -34,6 +37,11 @@
     &--secondary {
       background-color: $lightBlue;
       box-shadow: inset 0 -2px 1px 1px $secondaryBtnShadow;
+    }
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
     }
   }
 }
