--- a/Junior/clipboard-landing-page-main/src/sass/_variables.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_variables.scss
@@ -7,7 +7,7 @@ $darkGrayishBlue: hsl(210, 10%, 33%);
 $grayishBlue: hsl(201, 11%, 66%);
 $white: #fff;
 $primaryBtnShadow: hsl(171, 67%, 36%);
-$secondaryBtnShadow: hsl(233, 68%, 60%);
+$secondaryBtnShadow: hsl(233, 51%, 52%);
 $glow: hsla(171, 66%, 44%, 0.498);
 
 // Font
@@ -20,3 +20,5 @@ $font-lg: 1.3125rem; // 21px
 // Background image
 $bg-mobile: url("../../assets/images/bg-header-mobile.png");
 $bg-desktop: url("../../assets/images/bg-header-desktop.png");
+
+$transition: 0.5s ease-in-out;
