--- a/Junior/clipboard-landing-page-main/src/sass/_globals.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_globals.scss
@@ -17,9 +17,14 @@ body {
   background-color: $white;
 }
 
-h1 {
+h1,
+h2 {
   color: $darkGrayishBlue;
-  font-size: $font-h1;
+}
+
+h1 {
+  font-size: $font-xxl;
+  letter-spacing: -0.02em;
   line-height: 1.2;
   font-weight: 600;
 
@@ -29,14 +34,20 @@ h1 {
   }
 }
 
+h2 {
+  font-size: $font-xl;
+  letter-spacing: -0.025em;
+}
+
 p {
   font-size: $font-sm;
   line-height: 26px;
+  letter-spacing: 0.01em;
 
-  @include breakpoint-up(lg) {
-    font-size: $font-lg;
-    // letter-spacing: -1.5%;
-  }
+  // @include breakpoint-up(lg) {
+  //   font-size: $font-lg;
+  //   // letter-spacing: -1.5%;
+  // }
 }
 
 a,
