--- a/Junior/clipboard-landing-page-main/src/sass/_variables.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/_variables.scss
@@ -12,10 +12,11 @@ $glow: hsla(171, 66%, 44%, 0.498);
 
 // Font
 $BaiJamjuree: "Bai Jamjuree", sans-serif;
-$font-h1: 1.9375rem; // 31px
 $font-sm: 1.05rem; // 16px
 $font-md: 1.125rem; // 18px
 $font-lg: 1.3125rem; // 21px
+$font-xl: 1.53125rem; // 24.5px
+$font-xxl: 1.9375rem; // 31px
 
 // Background image
 $bg-mobile: url("../../assets/images/bg-header-mobile.png");
