--- a/Junior/clipboard-landing-page-main/src/sass/components/_about.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_about.scss
@@ -1,13 +1,11 @@
 .about {
+  h1,
+  h2 {
+    margin-bottom: 1.3125rem;
+  }
   &__text {
     text-align: center;
     margin-bottom: 4.25rem;
-
-    h1 {
-      margin-bottom: 1.375rem;
-    }
-
-    // p {}
   }
 
   &__image {
@@ -23,6 +21,10 @@
   &__features {
     ul {
       list-style: none;
+
+      li {
+        text-align: center;
+      }
     }
   }
 }
