--- a/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_hero.scss
@@ -57,6 +57,8 @@
       @include breakpoint-up(lg) {
         padding-left: 8rem;
         padding-right: 8rem;
+
+        font-size: $font-lg;
       }
 
       @include breakpoint-up(xl) {
