--- a/Junior/clipboard-landing-page-main/src/sass/components/_about.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_about.scss
@@ -1,11 +1,43 @@
 .about {
-  h1,
-  h2 {
+  border: 1px solid red;
+
+  h2,
+  h3 {
     margin-bottom: 1.3125rem;
   }
+
+  .container {
+    @include breakpoint-up(lg) {
+      display: flex;
+      align-items: center;
+    }
+  }
+
   &__text {
     text-align: center;
     margin-bottom: 4.25rem;
+
+    p {
+      // @include breakpoint-up(md) {
+      //   padding-left: 3rem;
+      //   padding-right: 3rem;
+      // }
+
+      @include breakpoint-up(lg) {
+        padding-left: 8rem;
+        padding-right: 8rem;
+
+        font-size: 1.125rem; // 18px
+        font-weight: 400;
+        letter-spacing: 0.0075em;
+        line-height: 1.875rem; // 30px
+      }
+
+      @include breakpoint-up(xl) {
+        padding-left: 21rem;
+        padding-right: 21rem;
+      }
+    }
   }
 
   &__image {
@@ -20,6 +52,10 @@
 
     @include breakpoint-up(md) {
       min-height: 34.25rem;
+    }
+
+    @include breakpoint-up(lg) {
+      background-image: none;
     }
   }
 
