--- a/Junior/clipboard-landing-page-main/src/sass/components/_about.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_about.scss
@@ -33,6 +33,10 @@
     @include breakpoint-up(lg) {
       display: flex;
       align-items: center;
+      gap: 5rem;
+    }
+
+    @include breakpoint-up(xl) {
       gap: 6.8125rem;
     }
   }
@@ -62,7 +66,7 @@
       @include breakpoint-up(lg) {
         content: "";
         position: absolute;
-        left: -5.15%;
+        left: -4%;
 
         width: 50%;
         height: 100%;
@@ -89,7 +93,7 @@
       gap: 58px;
 
       @include breakpoint-up(lg) {
-        gap: 65px;
+        gap: 4.0625rem; // 65px
       }
 
       li {
