Add global helper-classes to container, headings, and texts of Services.jsx

--- a/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
@@ -1,2 +1,21 @@
 .services {
+  text-align: center;
+
+  ul {
+    list-style: none;
+  }
+
+  //     &__text {
+
+  //     }
+
+  //   &__list {
+  //   }
+
+  &__sponsors {
+    img {
+      height: 100%;
+      width: auto;
+    }
+  }
 }
