--- a/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
@@ -18,7 +18,6 @@
     margin-bottom: 8.1875rem; // 131px
 
     ul {
-      //   gap: 3.5625rem; // 57px
       gap: 3.375rem; // 54px;
 
       h3 {
@@ -26,22 +25,45 @@
       }
 
       img {
+        height: 100%;
+        width: auto;
         margin-bottom: 2.15rem; // 34.4px
       }
     }
   }
 
   &__sponsors {
+    margin: 0 auto;
     ul {
-      gap: 3.9375rem; // 63px
+      //   border: 1px solid red;
 
-      li:not(:last-child) {
-        margin-bottom: 3.625rem; // 58px
-      }
+      height: 443px;
+      width: 144px;
 
       img {
+        object-fit: contain;
+        width: 100%;
         height: 100%;
-        width: auto;
+      }
+
+      li:nth-child(2) {
+        height: 46px;
+        width: 119px;
+      }
+
+      li:nth-child(3) {
+        height: 32px;
+        width: 139px;
+      }
+
+      li:nth-child(4) {
+        height: 50px;
+        width: 117px;
+      }
+
+      li:nth-child(5) {
+        height: 30px;
+        width: 109px;
       }
     }
   }
