--- a/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
@@ -34,11 +34,12 @@
 
   &__sponsors {
     margin: 0 auto;
+
     ul {
       //   border: 1px solid red;
 
-      height: 443px;
-      width: 144px;
+      height: 27.6875rem; // 443px
+      width: 9rem; // 144px
 
       img {
         object-fit: contain;
@@ -47,23 +48,23 @@
       }
 
       li:nth-child(2) {
-        height: 46px;
-        width: 119px;
+        height: 2.875rem; // 46px
+        width: 7.4375rem; // 119px
       }
 
       li:nth-child(3) {
-        height: 32px;
-        width: 139px;
+        height: 2rem; // 32px
+        width: 8.6875rem; // 139px
       }
 
       li:nth-child(4) {
-        height: 50px;
-        width: 117px;
+        height: 3.125rem; // 50px
+        width: 7.3125rem; // 117px
       }
 
       li:nth-child(5) {
-        height: 30px;
-        width: 109px;
+        height: 1.875rem; // 30px
+        width: 6.8125rem; // 109px
       }
     }
   }
