Add bottom padding to &__sponsors in services section

--- a/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
@@ -1,6 +1,7 @@
 .services {
   text-align: center;
   margin: 0 auto;
+  padding-bottom: 5.375rem; // 87px
 
   ul {
     list-style: none;
@@ -36,8 +37,6 @@
     margin: 0 auto;
 
     ul {
-      //   border: 1px solid red;
-
       height: 27.6875rem; // 443px
       width: 9rem; // 144px
 
