--- a/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
+++ b/Junior/clipboard-landing-page-main/src/sass/components/_services.scss
@@ -3,12 +3,21 @@
   margin: 0 auto;
   padding-bottom: 5.375rem; // 87px
 
+  //   @include breakpoint-up(xl) {
+  //     width: 1121px;
+  //     width: 100%;
+  //   }
+
   ul {
     list-style: none;
   }
 
   &__text {
     margin-bottom: 5.62rem; // 83.2px
+
+    @include breakpoint-up(xl) {
+      margin-bottom: 4.3125rem; // 69px
+    }
 
     h2 {
       margin-bottom: 0.9rem;
@@ -18,17 +27,44 @@
   &__list {
     margin-bottom: 8.1875rem; // 131px
 
+    @include breakpoint-up(xl) {
+      margin: 0 auto 8rem auto;
+    }
+
     ul {
       gap: 3.375rem; // 54px;
+      height: 220px;
+
+      @include breakpoint-up(xl) {
+        border: 1px solid red;
+        // min-height: 220px;
+        width: 1121px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: auto;
+      }
 
       h3 {
         margin-bottom: 1.1rem; // 17.6px
+
+        @include breakpoint-up(xl) {
+          margin-bottom: 22px;
+        }
       }
 
       img {
         height: 100%;
         width: auto;
         margin-bottom: 2.15rem; // 34.4px
+
+        @include breakpoint-up(xl) {
+          height: 45px;
+          line-height: 45px;
+          margin-bottom: 37px;
+        }
       }
     }
   }
@@ -40,10 +76,24 @@
       height: 27.6875rem; // 443px
       width: 9rem; // 144px
 
+      @include breakpoint-up(xl) {
+        flex-direction: row;
+
+        width: 1121px;
+        height: 59px;
+      }
+
       img {
         object-fit: contain;
         width: 100%;
         height: 100%;
+      }
+
+      li {
+        @include breakpoint-up(xl) {
+          height: 59px;
+          width: auto;
+        }
       }
 
       li:nth-child(2) {
